--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,7 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+resource.h
+MyDoublyLinkedList.vcxproj
+MyDoublyLinkedList.vcxproj.filters
+*.rc
